# dd_maths_traits

./: Cargo.toml  DEV-README.md  README.md
src/: lib.rs
src/est/: mod.rs
src/int/: compat.rs  mod.rs
src/num_sys/: mod.rs
src/num_sys/base_10/: mod.rs  ten.rs
src/num_sys/base_10/int/: get_last_digit_as_u8.rs  get_last_digit_base_10_as_u8.rs  mod.rs  new_vec_u8_of_digits_base_10.rs  sum_digits.rs  sum_digits_base_10.rs
src/ranges/: mod.rs
