[package]
name = "dd_maths_traits"
version = "0.1.7"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
# rust-version = "1.59.0" https://github.com/foresterre/cargo-msrv/issues/244
description = "Strongly recommended to avoid using while in development. No semver guarantees."
documentation = "https://docs.rs/dd_maths_traits"
readme = "README.md"
repository = "https://github.com/JohnScience/dd_maths_traits"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["maths", "traits"]
categories = ["mathematics"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-bigint = { version ="0.4.3", optional = true }

[dev-dependencies]
num-bigint = { version = "0.4.3" }

[features]
all = ["std", "bigint", "nightly"]

std = []
bigint = ["num-bigint"]
nightly = ["adt_const_params", "negative_impls", "const_trait_impl", "decl_macro"]

adt_const_params = []
negative_impls = []
const_trait_impl = []
decl_macro = []

[package.metadata.docs.rs]
features = ["all"]
# https://github.com/RustCrypto/traits/blob/941614d788506abc893508405bcdd683aa9cb58c/elliptic-curve/Cargo.toml#L64
rustdoc-args = ["--cfg", "docsrs"]